_site/jekyll.template
<!doctype html>

<html class="no-js" lang="en">

<head>


	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

	eliezerchavez

	Personal Theme by https://jekyllthemes.io
	Premium + free Jekyll themes for your blog or website.

	- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->


	<meta charset="utf-8">
	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

	<!-- Page Info -->
	<link rel="shortcut icon" href="/images/favicon.png">
	<title> – eliezerchavez</title>
	<meta name="description" content="">

	<!-- MS Tile - for Microsoft apps-->
	<meta name="msapplication-TileImage" content="">

	<!-- Twitter Card -->
	<meta name="twitter:card" content="summary_large_image">
	<meta name="twitter:title" content=" – eliezerchavez">
	<meta name="twitter:description" content="">
	<meta name="twitter:image:src" content="">

	<!-- Facebook OpenGraph -->
	<meta property="og:title" content=" – eliezerchavez" />
	<meta property="og:url" content="https://eliezer.io/jekyll.template" />
	<meta property="og:image" content="" />
	<meta property="og:type" content="website" />
	<meta property="og:description" content="" />

	
	<!-- Font Embed Code -->
	<link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet">
	

	<!-- Styles -->
	<meta name="viewport" content="width=device-width, initial-scale=1">
	<link rel="stylesheet" href="/css/style.css">
	
	<!-- Icons -->
	<script defer src="https://use.fontawesome.com/releases/v5.1.1/js/solid.js" integrity="sha384-GXi56ipjsBwAe6v5X4xSrVNXGOmpdJYZEEh/0/GqJ3JTHsfDsF8v0YQvZCJYAiGu" crossorigin="anonymous"></script>
	<script defer src="https://use.fontawesome.com/releases/v5.1.1/js/brands.js" integrity="sha384-0inRy4HkP0hJ038ZyfQ4vLl+F4POKbqnaUB6ewmU4dWP0ki8Q27A0VFiVRIpscvL" crossorigin="anonymous"></script>
	<script defer src="https://use.fontawesome.com/releases/v5.1.1/js/fontawesome.js" integrity="sha384-NY6PHjYLP2f+gL3uaVfqUZImmw71ArL9+Roi9o+I4+RBqArA2CfW1sJ1wkABFfPe" crossorigin="anonymous"></script>

	
	<!-- Custom Styles -->
	<style>
        @font-face {
            font-family: 'Gilroy ExtraBold';
            src: url('/fonts/Gilroy-ExtraBold.eot'); /* IE9 Compat Modes */
            src: url('/fonts/Gilroy-ExtraBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
                 url('/fonts/Gilroy-ExtraBold.woff2') format('woff2'), /* Super Modern Browsers */
                 url('/fonts/Gilroy-ExtraBold.woff') format('woff'), /* Pretty Modern Browsers */
                 url('/fonts/Gilroy-ExtraBold.ttf') format('truetype'), /* Safari, Android, iOS */            
                 url('/fonts/Gilroy-ExtraBold.otf') format('opentype');
        }
    </style>
	

	
	<!-- Analytics Code -->
	<!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFVTW92T0X"></script>
    <script>
        window.dataLayer = window.dataLayer || [];
        function gtag(){dataLayer.push(arguments);}
        gtag('js', new Date());

        gtag('config', 'G-BFVTW92T0X');
    </script>
	

	
	<!-- Extra Header JS Code -->
	
	
	
</head>


<body class="loading ajax-loading" data-site-url="https://eliezer.io" data-page-url="/jekyll.template">


	<header class="header">

	<div class="wrap">

		
		<a href="/" class="header__logo">
			<img src="/images/logo.png" class="header__logo__img">
		</a>
		

		<div class="menu">
			<div class="menu__toggle js-menu-toggle">
				<div class="menu__toggle__icon"><span></span></div>
			</div>
			<div class="menu__wrap">
				<ul class="menu__list">
					
					<li class="menu__list__item">
						<a href="/" class="menu__list__item__link">home</a>
					</li>
					
					<li class="menu__list__item">
						<a href="/blog/" class="menu__list__item__link">blog</a>
					</li>
					
					<li class="menu__list__item">
						<a href="/about" class="menu__list__item__link">about</a>
					</li>
					
					<li class="menu__list__item">
						<a href="/contact" class="menu__list__item__link">contact</a>
					</li>
					
				</ul>
			</div>
		</div>

	</div>

</header>


	<div class="loader"><svg width="120" height="30" viewBox="0 0 120 30" xmlns="http://www.w3.org/2000/svg"><circle cx="15" cy="15" r="15"><animate attributeName="r" from="15" to="15" begin="0s" dur="0.8s" values="15;9;15" calcMode="linear" repeatCount="indefinite" /><animate attributeName="fill-opacity" from="1" to="1" begin="0s" dur="0.8s" values="1;.5;1" calcMode="linear" repeatCount="indefinite" /></circle><circle cx="60" cy="15" r="9" fill-opacity="0.3"><animate attributeName="r" from="9" to= [...]

	<div class="page-loader"></div>

	
	<div class="page">

		<div class="page__content" data-page-title=" – eliezerchavez">

			<section class="hero hero--single">

	<div class="hero__image" style="background-image: url()">
		<div class="hero__overlay"></div>
	</div>

	<div class="wrap">

		<h1></h1>
		<p></p>

	</div>

</section>

<section class="single">

	<div class="wrap">

		<article class="single-post">

			---
AWSTemplateFormatVersion: 2010-09-09
Description: eliezer.io WordPress Stack

Metadata:

  Authors:
    Description: Eliezer Chavez (ec@eliezer.io)
  License:
    Description: 'Copyright 2020. All Rights Reserved.
                  SPDX-License-Identifier: MIT-0'

  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: General
      Parameters:
      - EnvironmentType
    - Label:
        default: Network Configuration
      Parameters:
      - VPCCIDR
      - SubnetCIDR
    - Label:
        default: WordPress Instance Configuration
      Parameters:
      - ImageId
      - InstanceType
      - KeyPair
    ParameterLabels:
      EnvironmentType:
        default: "Stack's environment"
      VPCCIDR:
        default: CIDR for the VPC
      SubnetCIDR: 
        default: CIDR for the Public Subnet
      ImageId: 
        default: Image Id for the EC2 Bastion instance
      KeyPair: 
        default: SSH keypair for the EC2 Bastion instance

Parameters:
  EnvironmentType:
    AllowedValues: [DEV, STG, PRD]
    ConstraintDescription: Must specify DEV, STG or PRD
    Default: DEV
    Description: An environment name that is prefixed to resource names
    Type: String
  ImageId:
    Description: Image Id
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/canonical/ubuntu/server/20.04/stable/current/amd64/hvm/ebs-gp2/ami-id'
  InstanceType:
    AllowedValues: [t3.micro, t3.small, t3.medium, t3.large, t3.xlarge, t3.2xlarge, m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge]
    ConstraintDescription: Must specify t3.micro, t3.small, t3.medium, t3.large, t3.xlarge, t3.2xlarge, m5.large, m5.xlarge, m5.2xlarge or m5.4xlarge
    Default: t3.small
    Description: The EC2 instance type to use for the Launch Template
    Type: String
  KeyPair:
    Default: gadolinium
    Description: The EC2 key pair to use for the Launch Template
    Type: AWS::EC2::KeyPair::KeyName
  SubnetCIDR:
    AllowedPattern: '^(10\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})/(1[6-9]|2[0-8]))|(172\.(1[6-9]|2[0-9]|3[0-1])\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})/(1[6-9]|2[0-8]))|(192\.168\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})/(1[6-9]|2[0-8]))$'
    Default: 192.168.0.1/24
    Description: Please enter the IP range (CIDR notation) for the public subnets
    Type: String
  VPCCIDR:
    AllowedPattern: '^(10\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})/(1[6-9]|2[0-8]))|(172\.(1[6-9]|2[0-9]|3[0-1])\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})/(1[6-9]|2[0-8]))|(192\.168\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})\.([0-9]{1,2}|1[0-9]{2}|2[0-5]{2})/(1[6-9]|2[0-8]))$'
    Default: 192.168.0.0/16
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String

Resources:
  VPC:
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - { Key: Name, Value: !Sub '${AWS::StackName} ${EnvironmentType} VPC' }
      - { Key: Environment, Value: !Ref EnvironmentType }
    Type: AWS::EC2::VPC

  InternetGateway:
    Properties:
      Tags:
      - { Key: Name, Value: !Sub '${AWS::StackName} ${EnvironmentType} Internet Gateway' }
      - { Key: Environment, Value: !Ref EnvironmentType }
    Type: AWS::EC2::InternetGateway
  VPCGatewayAttachment:
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
    Type: AWS::EC2::VPCGatewayAttachment

  WordPressInstanceEIP:
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
      - { Key: Name, Value: !Sub '${AWS::StackName} ${EnvironmentType} Elastic IP 0' }
      - { Key: Environment, Value: !Ref EnvironmentType }
    Type: AWS::EC2::EIP

  WordPressInstanceEIPAssociation:
    Properties: 
      AllocationId: !GetAtt WordPressInstanceEIP.AllocationId
      NetworkInterfaceId: !Ref WordPressIntanceNIC
    Type: AWS::EC2::EIPAssociation

  PublicRouteTable:
    Properties:
      VpcId: !Ref VPC
      Tags:
      - { Key: Name, Value: !Sub '${AWS::StackName} ${EnvironmentType} Public Route Table' }
      - { Key: Environment, Value: !Ref EnvironmentType }
    Type: AWS::EC2::RouteTable
  DefaultPublicRoute:
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Type: AWS::EC2::Route

  PublicSubnet0:
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref SubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
      - { Key: Name, Value: !Sub '${AWS::StackName} ${EnvironmentType} Public SubNet 0' }
      - { Key: Environment, Value: !Ref EnvironmentType }
      VpcId: !Ref VPC
    Type: AWS::EC2::Subnet
  PublicSubnet0RouteTableAssociation:
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet0
    Type: AWS::EC2::SubnetRouteTableAssociation

  SecurityGroup0:
    Properties:
      GroupDescription: Enable SSH/HTTP/HTTPS ingress for WordPress Instance
      SecurityGroupIngress:
      - { IpProtocol: tcp, FromPort: 22, ToPort: 22, CidrIp: 0.0.0.0/0 }
      - { IpProtocol: tcp, FromPort: 80, ToPort: 80, CidrIp: 0.0.0.0/0 }
      - { IpProtocol: tcp, FromPort: 443, ToPort: 443, CidrIp: 0.0.0.0/0 }
      Tags:
      - { Key: Name, Value: !Sub '${AWS::StackName} ${EnvironmentType} Security Group 0' }
      - { Key: Environment, Value: !Ref EnvironmentType }
      VpcId: !Ref VPC
    Type: AWS::EC2::SecurityGroup

  WordPressIntanceNIC:
    Properties:
      SubnetId: !Ref PublicSubnet0
      Description: Interface for controlling traffic such as SSH/HHTP/HTTPS
      GroupSet: 
      - !Ref SecurityGroup0
      SourceDestCheck: true
      Tags:
      - { Key: Name, Value: !Sub '${AWS::StackName} ${EnvironmentType} WordPress Instance Network Interface 0' }
      - { Key: Environment, Value: !Ref EnvironmentType }
    Type: AWS::EC2::NetworkInterface

  WordPressInstance:
    DependsOn: VPCGatewayAttachment
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyPair
      NetworkInterfaces:
        - { NetworkInterfaceId: !Ref WordPressIntanceNIC, DeviceIndex: 0 }
      Tags:
      - { Key: Name, Value: !Sub '${AWS::StackName} ${EnvironmentType} WordPress Instance' }
      - { Key: Environment, Value: !Ref EnvironmentType }
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          
          timedatectl set-timezone America/Lima

          apt-get update && apt-get upgrade -y
    Type: AWS::EC2::Instance

Outputs:
  VPC:
    Description: VPC ID
    Export:
      Name: !Sub '${AWS::StackName}-${EnvironmentType}-VPC'
    Value: !Ref VPC
  PublicSubnet0:
    Description: 1/2 subnet IDs to use for public servers
    Export:
      Name: !Sub '${AWS::StackName}-${EnvironmentType}-PublicSubnet0'
    Value: !Ref PublicSubnet0
  SecurityGroup0:
    Description: Security Group ID to use for bastion servers
    Export:
      Name: !Sub '${AWS::StackName}-${EnvironmentType}-SecurityGroup0'
    Value: !Ref SecurityGroup0
  WordPressInstance:
    Description: WordPress Instance IP address
    Value: !GetAtt WordPressInstance.PublicIp


		</article>

	</div>

</section>

		</div>

	</div>


	<footer class="footer">

	<div class="wrap">

		<p class="footer__text">with collaboration of <b>317 Group</b></p>

		<div class="footer__copyright">
			<span>© 2021 eliezerchavez</span>
			<a href="https://jekyllthemes.io" target="_blank">Jekyll Themes</a>
		</div>

		<ul class="socials">
	
	
	<li class="socials__item">
		<a href="https://www.linkedin.com/in/eliezerchavez/" target="_blank" class="socials__item__link" title="Linkedin">
			<i class="fab fa-linkedin" aria-hidden="true"></i>
		</a>
	</li>
	
	
	
	<li class="socials__item">
		<a href="https://github.com/eliezerchavez" target="_blank" class="socials__item__link" title="Github">
			<i class="fab fa-github" aria-hidden="true"></i>
		</a>
	</li>
	
	
	
	<li class="socials__item">
		<a href="https://www.instagram.com/eliezerchavez/" target="_blank" class="socials__item__link" title="Instagram">
			<i class="fab fa-instagram" aria-hidden="true"></i>
		</a>
	</li>
	
	
	
	<li class="socials__item">
		<a href="https://www.facebook.com/eliezerchavez" target="_blank" class="socials__item__link" title="Facebook">
			<i class="fab fa-facebook-f" aria-hidden="true"></i>
		</a>
	</li>
	
	
	
	<li class="socials__item">
		<a href="https://twitter.com/eliezerchavez" target="_blank" class="socials__item__link" title="Twitter">
			<i class="fab fa-twitter" aria-hidden="true"></i>
		</a>
	</li>
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
</ul>

	</div>

</footer>


	<!-- Javascript Assets -->
	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
	<script src="/js/plugins-min.js"></script>
	<script src="/js/personal-min.js"></script>

	
	<!-- Extra Footer JS Code -->
	
	


</body>

</html>
